////
This file is intended to be read in HTML via translation with asciidoc.
////

= IronBee Development
:toc2:

== IronBee v0.13.0

**Build**

- Add stringencoders into the build tree (it was too hard to find on many distros).

**Development**

- Change deprecation logs to info level.
- Lots of misc cleanup to various structures (ABI bump).

**Modules**

- `ibmod_txlog` now has working bandwidth fields.
- `ibmod_txlog` now has request/path field that is the normalized URI path.
- `ibmod_txlog` now implements custom data fields. See manuel documentation for the TxLogData directive.

== IronBee v0.12.1

**Backports**

- Backported fixes from 0.13 to fix "bandwidth" in txlogs as well as include the "path" in txlogs. See Incompatibilies below.
- Backported pcre module from master with cleanup and performance fixes.

**Development**

- Add missing headers for use with newer boost versions.

**Performance**

- Remove extraneous mutexes causing contention in the trafficserver plugin.

**Build**

- Lots of minor fixes to the build system - escpecially surrounding (over) linking issues.

**Incompatibilities**

- It was important enough to bump the ABI because of a 0.13.0 backport that was required in 0.12.1. Because of this, any external modules will need to be recompiled against 0.12.1.

== IronBee v0.12.0

**Development**

- ABI Change.
- Removed "fields" from log events as this did not make sense with Predicate or other non-field centric rules. Instead use a tag (e.g., "loc/url/params").

**Modules**

- New module, `ibmod_utf8`, provides transformations for handling UTF-8 validation, normalization and conversion.

== IronBee v0.11.3

**Bugs Fixed**

- Fixed potential buffer overread for long messages that were truncated.

== IronBee v0.11.2

**Bugs Fixed**

- Fixed issue where requests with a body may hang when response was non-2xx.
- Fixed issue where event tags were not being copied from Lua memory space and under heavy load may cause corruption if garbage collected.
